compiler/testData/diagnostics/tests/inference/emptyIntersectionTypes/kt45461_15.diag.txt
/kt45461_15.kt:14:21: error: type argument for a type parameter S can't be inferred because it has incompatible upper bounds: Inv<Int>, K (incompatible type arguments: Int, {A & Number})
    Bar<Inv<Int>>().takeFoo(foo) // error in 1.3.72, no error in 1.4.31
                    ^
